Rebase from 'upstream' @ version '0.2.2'

--- a/src/rosdoc_lite/templates/header.html
+++ b/src/rosdoc_lite/templates/header.html
@@ -1,3 +1,4 @@
+<html><head><meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <title>$package: $title</title>
 <link href="$relpath$doxygen.css" rel="stylesheet" type="text/css">
 <link href="$relpath$tabs.css" rel="stylesheet" type="text/css">
